Perkin-UAT/force-app/main/default/objects/Medical_Policy__c/Medical_Policy__c.object-meta.xml
<CustomObject>
    <label>Medical Policy</label>
    <nameField>
        <displayFormat>Medical Policy -{0000000}</displayFormat>
        <label>Medical Policy Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>