Perkin-UAT/force-app/main/default/objects/Medical_Policy__c/fields/ICD_10_Diagnosis_codes__c.field-meta.xml
<CustomField>
    <fullName>ICD_10_Diagnosis_codes__c</fullName>
    <label>ICD-10 / Diagnosis codes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>