Perkin-UAT/force-app/main/default/objects/Medical_Policy__c/fields/Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>Policy_ID__c</fullName>
    <label>Policy ID#</label>
    <length>200</length>
    <type>Text</type>
</CustomField>