Perkin-UAT/force-app/main/default/objects/Medical_Policy__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Array CGH Postnatal Medical Policy</fullName>
            </value>
            <value>
                <fullName>Array CGH Prenatal</fullName>
            </value>
            <value>
                <fullName>NIPT / cell free DNA using maternal serum</fullName>
            </value>
            <value>
                <fullName>FTS / NT</fullName>
            </value>
            <value>
                <fullName>Cystic fibrosis</fullName>
            </value>
            <value>
                <fullName>Preeclampsia</fullName>
            </value>
            <value>
                <fullName>Carrier Screening</fullName>
            </value>
            <value>
                <fullName>Next Generation Sequencing Genetic Testing</fullName>
            </value>
            <value>
                <fullName>NEW TEST</fullName>
            </value>
            <value>
                <fullName>ViaCord</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>